test/src/main/jkube/Routes.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test-route
  labels:
    app: test
spec:
  to:
    kind: Service
    name: test-service
    weight: 256
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
---
