test/src/main/jkube/Service.yml
kind: Service
apiVersion: v1
metadata:
  name: test-service
  labels:
    app: test
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: test
